--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-just a test
+
+<!DOCTYPE html>
+<html lang="en">
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link href="./favicon.png" rel="shortcut icon" />
+	<title>Howdy!</title>	
+</head>
+<style>
+    body {
+        background: #0e0e0e;
+        color: #e1e1e1;
+        font-family: Verdana;
+    }
+    a, a:visited { 
+        color: #e1e1e1;
+    } 
+    .content {
+        margin-top: 15%;
+        text-align: center;
+    }
+</style>
+<body>
+    <div class="content">
+    <p>There is nothing to see here, but you can check out the <a href="https://jeanropke.github.io/RDOMap/">RDO Map</a> and <a href="https://jeanropke.github.io/RDR2CollectorsMap/">Collectors Map</a> here.</p>
+    <p>If you need help with cycles and stuff, <a href="https://github.com/jeanropke/RDR2CollectorsMap/wiki/Naturalist-Update-Changes">click here</a> to read about how it works.</p>
+    <p>Have a nice day! :)</p>
+    </div>
+<!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=UA-39999584-5"></script><script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-39999584-5');
+</script></body>
+</html>
