--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+	<meta name="keywords" content="Red Dead Online, Collectors Map, RDO Map, Map, Interactive Map, Interactive, jeanropke map, jeanropke, jean ropke">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="./favicon.png" rel="shortcut icon" />
 	<title>Howdy!</title>	
 </head>
