--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-39999584-5');
-</script></body>
+</script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971"
+     crossorigin="anonymous"></script></body>
 </html>
