--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div class="content">
     <p>There is nothing to see here, but you can check out the <a href="https://jeanropke.github.io/RDOMap/">RDO Map</a> and <a href="https://jeanropke.github.io/RDR2CollectorsMap/">Collectors Map</a> here.</p>
     <p>If you need help with cycles and stuff, <a href="https://github.com/jeanropke/RDR2CollectorsMap/wiki/Naturalist-Update-Changes">click here</a> to read about how it works.</p>
+    <p>If you like to create your own map, <a href="https://github.com/jeanropke/GTA3Map">check this repo</a> (<a href="https://jeanropke.github.io/GTA3Map/">live version</a>), a smaller version of RDO Map for GTA 3.</p>
+	    
     <p>Have a nice day! :)</p>
     </div>
 <!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=UA-39999584-5"></script><script>
