--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="./favicon-32x32.png" rel="shortcut icon" />
-    <title>Hello there!</title>  
+    <title>Hello there!</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971"
+     crossorigin="anonymous"></script>
   </head>
   <style>
   body {
