--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/styles.css?nocache=1585" />
   <link rel="stylesheet" href="assets/css/tippy.css?nocache=1585" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971" crossorigin="anonymous"></script>
   <script>
     const nocache = 1585;
   </script>
@@ -95,6 +94,17 @@
         <div id="copy-search-link" class="input-action-copy" data-help="search_copy_link"></div>
       </div>
     </div>
+    <div>
+      <ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8337816533364971"
+     data-ad-slot="3475533274"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    </div>
     <div id="cycle-changer-container" class="cycle-changer hidden">
       <div id="cycle-prev" class="input-selection-arrow"><img src="assets/images/selection_left.png" alt="arrow"></div>
       <span class="cycle-date">¯\_(ツ)_/¯</span>
@@ -102,8 +112,8 @@
     </div>
 
     <div class="links-container">
-      <a data-text="menu.hide_all" data-help="hide_all" href="javascript:void(0);">Hide all</a>
-      <a data-text="menu.show_all" data-help="show_all" href="javascript:void(0);">Show all</a>
+      <button class="btn btn-light" data-text="menu.hide_all" data-help="hide_all">Hide all</button>
+      <button class="btn btn-light" data-text="menu.show_all" data-help="show_all">Show all</button>
     </div>
 
     <div id="collection-insertion-before-point">
@@ -155,8 +165,8 @@
         </div>
         <div class="menu-hidden two-column" data-type="treasure">
           <div class="collection-value">
-            <a data-text="menu.hide_all" href="javascript:void(0);">Hide all</a>
-            <a data-text="menu.show_all" href="javascript:void(0);">Show all</a>
+            <button class="btn btn-light" data-text="menu.hide_all">Hide all</button>
+            <button class="btn btn-light" data-text="menu.show_all">Show all</button>
           </div>
         </div>
       </div>
@@ -170,8 +180,8 @@
         </div>
         <div class="menu-hidden two-column" data-type="legendary_animals">
           <div class="collection-value">
-            <a data-text="menu.hide_all" href="javascript:void(0);">Hide all</a>
-            <a data-text="menu.show_all" href="javascript:void(0);">Show all</a>
+            <button class="btn btn-light" data-text="menu.hide_all">Hide all</button>
+            <button class="btn btn-light" data-text="menu.show_all">Show all</button>
           </div>
         </div>
       </div>
@@ -1066,7 +1076,7 @@
   </div>
 
   <!-- Modals -->
-  <div class="modal fade" id="fme-enabled-events-modal" tabindex="-1" role="dialog"
+  <div class="modal fade" id="fme-enabled-events-modal" tabindex="-1"
     aria-labelledby="fme-enabled-events-title">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
@@ -1082,13 +1092,13 @@
           <div id="events" class="settings-container"></div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.close">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.close">Close</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="map-updates-modal" tabindex="-1" role="dialog" aria-labelledby="map-updates-title">
+  <div class="modal fade" id="map-updates-modal" tabindex="-1" aria-labelledby="map-updates-title">
     <div class="modal-dialog modal-updates" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -1097,13 +1107,13 @@
         </div>
         <div class="modal-body"></div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.close">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.close">Close</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="loot-table-modal" tabindex="-1" role="dialog" aria-labelledby="loot-table-title">
+  <div class="modal fade" id="loot-table-modal" tabindex="-1" aria-labelledby="loot-table-title">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -1115,13 +1125,13 @@
           <p data-text="menu.modal_loot_table_all_tables_descr"></p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.close">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.close">Close</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="custom-marker-color-modal" tabindex="-1" role="dialog"
+  <div class="modal fade" id="custom-marker-color-modal" tabindex="-1"
     aria-labelledby="custom-marker-color-title">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
@@ -1135,13 +1145,13 @@
           <div id="custom-colors" class="settings-container" style="font-size: 1.3rem"></div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.close">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.close">Close</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="clear-markers-modal" tabindex="-1" role="dialog" aria-labelledby="clear-markers-title">
+  <div class="modal fade" id="clear-markers-modal" tabindex="-1" aria-labelledby="clear-markers-title">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -1153,15 +1163,15 @@
           This will reset all markers you've removed from the map. This action cannot be undone.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.no">No</button>
-          <button id="clear-markers" type="button" class="btn btn-danger" data-dismiss="modal"
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.no">No</button>
+          <button id="clear-markers" type="button" class="btn btn-danger" data-bs-dismiss="modal"
             data-text="menu.yes">Yes</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="clear-important-items-modal" tabindex="-1" role="dialog"
+  <div class="modal fade" id="clear-important-items-modal" tabindex="-1"
     aria-labelledby="clear-important-items-title">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
@@ -1174,15 +1184,15 @@
           This will clear the highlight from all markers marked as important. This action cannot be undone.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.no">No</button>
-          <button id="clear_highlights" type="button" class="btn btn-danger" data-dismiss="modal"
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.no">No</button>
+          <button id="clear_highlights" type="button" class="btn btn-danger" data-bs-dismiss="modal"
             data-text="menu.yes">Yes</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="clear-inventory-modal" tabindex="-1" role="dialog"
+  <div class="modal fade" id="clear-inventory-modal" tabindex="-1"
     aria-labelledby="clear-inventory-title">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
@@ -1195,15 +1205,15 @@
           This will clear your inventory. This action cannot be undone.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.no">No</button>
-          <button id="clear-inventory" type="button" class="btn btn-danger" data-dismiss="modal"
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.no">No</button>
+          <button id="clear-inventory" type="button" class="btn btn-danger" data-bs-dismiss="modal"
             data-text="menu.yes">Yes</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="clear-routes-modal" tabindex="-1" role="dialog" aria-labelledby="clear-routes-title">
+  <div class="modal fade" id="clear-routes-modal" tabindex="-1" aria-labelledby="clear-routes-title">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -1216,15 +1226,15 @@
           This action cannot be undone.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.no">No</button>
-          <button id="clear-custom-routes" type="button" class="btn btn-danger" data-dismiss="modal"
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.no">No</button>
+          <button id="clear-custom-routes" type="button" class="btn btn-danger" data-bs-dismiss="modal"
             data-text="menu.yes">Yes</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="delete-all-settings-modal" tabindex="-1" role="dialog"
+  <div class="modal fade" id="delete-all-settings-modal" tabindex="-1"
     aria-labelledby="delete-all-settings-title">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
@@ -1237,8 +1247,8 @@
           This will reset all settings to their default values and reload the page.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.no">No</button>
-          <button id="delete-all-settings" type="button" class="btn btn-danger" data-dismiss="modal"
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.no">No</button>
+          <button id="delete-all-settings" type="button" class="btn btn-danger" data-bs-dismiss="modal"
             data-text="menu.yes">Yes</button>
         </div>
       </div>
@@ -1246,7 +1256,7 @@
   </div>
 
 
-  <div class="modal fade" id="remove-all-pins-modal" tabindex="-1" role="dialog"
+  <div class="modal fade" id="remove-all-pins-modal" tabindex="-1"
     aria-labelledby="remove-all-pins-title">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
@@ -1258,15 +1268,15 @@
           This will delete all your custom pins. This action cannot be undone.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.no">No</button>
-          <button id="remove-all-pins" type="button" class="btn btn-danger" data-dismiss="modal"
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.no">No</button>
+          <button id="remove-all-pins" type="button" class="btn btn-danger" data-bs-dismiss="modal"
             data-text="menu.yes">Yes</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="mapping-modal" tabindex="-1" role="dialog" aria-labelledby="mapping-modal-title">
+  <div class="modal fade" id="mapping-modal" tabindex="-1" aria-labelledby="mapping-modal-title">
     <div class="modal-dialog modal-updates" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -1274,13 +1284,13 @@
         </div>
         <div class="modal-body"></div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.close">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.close">Close</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="import-rdo-inventory-modal" tabindex="-1" role="dialog" aria-labelledby="import-rdo-inventory-modal-title">
+  <div class="modal fade" id="import-rdo-inventory-modal" tabindex="-1" aria-labelledby="import-rdo-inventory-modal-title">
     <div class="modal-dialog modal-updates" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -1312,7 +1322,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.close">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.close">Close</button>
           <button id="import-rdo-inventory" type="button" class="btn btn-primary" data-text="menu.import_button">Import</button>
         </div>
       </div>
@@ -1339,12 +1349,10 @@
   <script src="https://js.sentry-cdn.com/8bb034d026aa4fb38d3428be80b9f776.min.js" crossorigin="anonymous" data-lazy="no"></script>
   <!-- https://github.com/aceakash/string-similarity -->
   <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
-  <script src="assets/js/lib/jquery-3.4.1.min.js"></script>
   <script src="assets/js/lib/bootstrap.min.js"></script>
   <script src="assets/js/loader.js?nocache=1585"></script>
   <script src="assets/js/lib/popper.min.js"></script>
   <script src="assets/js/lib/tippy.min.js"></script>
-  <script src="assets/js/lib/jquery.cookie.js"></script>
   <script src="assets/js/lib/leaflet.js"></script>
   <script src="assets/js/lib/oms.min.js"></script>
   <script src="assets/js/lib/rbush.js"></script>
