--- a/index.html
+++ b/index.html
@@ -94,12 +94,11 @@
         <div id="copy-search-link" class="input-action-copy" data-help="search_copy_link"></div>
       </div>
     </div>
-    <div>
+    <div style="height:140px">
       <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-8337816533364971"
      data-ad-slot="3475533274"
-     data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
