--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 
   <link rel="stylesheet" href="assets/css/leaflet.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/styles.css?nocache=1585" />
-  <link rel="stylesheet" href="assets/css/tippy.css?nocache=1585" />
+  <link rel="stylesheet" href="assets/css/styles.css?nocache=1586" />
+  <link rel="stylesheet" href="assets/css/tippy.css?nocache=1586" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971" crossorigin="anonymous"></script>
+
   <script>
-    const nocache = 1585;
+    const nocache = 1586;
   </script>
 </head>
 
@@ -96,14 +97,14 @@
     </div>
     <div>
       <ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-8337816533364971"
-     data-ad-slot="3475533274"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+        style="display:inline-block;min-width:400px;max-width:970px;width:100%;height:90px"
+        data-ad-client="ca-pub-8337816533364971"
+        data-ad-slot="3475533274"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
     <div id="cycle-changer-container" class="cycle-changer hidden">
       <div id="cycle-prev" class="input-selection-arrow"><img src="assets/images/selection_left.png" alt="arrow"></div>
@@ -1297,17 +1298,6 @@
           <h4 class="modal-title" id="import-rdo-inventory-modal-title" data-text="menu.modal_import_rdo_inventory_title">Import RDO character inventory</h4>
         </div>
         <div class="modal-body" style="text-align: left;">
-          <p data-text="menu.modal_import_rdo_inventory_extension">You can sync your inventory using this extension. Just install it and press one button. Compatible with Chromium based browsers like Brave, Google Chrome, Microsoft Edge, Opera.</p>
-          <p class="chrome-store-button">
-            <a href="https://chrome.google.com/webstore/detail/red-dead-online-collector/ppkogdbkpfkienlkjoicbpogdeonalih" target="_blank">
-              <img src="./assets/images/chrome_web_store.png">
-            </a>
-          </p>
-          <div class="header">
-            <span class="header-border"></span>
-            <h2 class="header-title" data-text="menu.modal_import_rdo_inventory_manual">Manual</h2>
-            <span class="header-border"></span>
-          </div>
           <p data-text="menu.modal_import_rdo_inventory_intro">To import your character inventory to this map, follow this steps:</p>
 
           <p data-text="menu.modal_import_rdo_inventory_step_1">1. <a href="https://socialclub.rockstargames.com/games/rdo/overview" target="_blank">Log in</a> your Social Club account.</p>
@@ -1350,7 +1340,7 @@
   <!-- https://github.com/aceakash/string-similarity -->
   <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
   <script src="assets/js/lib/bootstrap.min.js"></script>
-  <script src="assets/js/loader.js?nocache=1585"></script>
+  <script src="assets/js/loader.js?nocache=1586"></script>
   <script src="assets/js/lib/popper.min.js"></script>
   <script src="assets/js/lib/tippy.min.js"></script>
   <script src="assets/js/lib/leaflet.js"></script>
@@ -1359,26 +1349,26 @@
   <script>var module = {};</script>
   <script src="assets/js/lib/leaflet.canvas-markers.js"></script>
   <script>module.exports(L);</script>
-  <script src="assets/js/layers.js?nocache=1585"></script>
-  <script src="assets/js/settings.js?nocache=1585"></script>
-  <script src="assets/js/mapping.js?nocache=1585"></script>
-  <script src="assets/js/nazar.js?nocache=1585"></script>
-  <script src="assets/js/fme.js?nocache=1585"></script>
-  <script src="assets/js/cycles.js?nocache=1585"></script>
-  <script src="assets/js/marker.js?nocache=1585"></script>
-  <script src="assets/js/inventory.js?nocache=1585"></script>
-  <script src="assets/js/treasures.js?nocache=1585"></script>
-  <script src="assets/js/legendary.js?nocache=1585"></script>
-  <script src="assets/js/pins.js?nocache=1585"></script>
-  <script src="assets/js/map.js?nocache=1585"></script>
-  <script src="assets/js/language.js?nocache=1585"></script>
-  <script src="assets/js/menu.js?nocache=1585"></script>
-  <script src="assets/js/items.js?nocache=1585"></script>
-  <script src="assets/js/category-collection.js?nocache=1585"></script>
-  <script src="assets/js/routes.js?nocache=1585"></script>
-  <script src="assets/js/pathfinder.main.js?nocache=1585"></script>
-  <script src="assets/js/updates.js?nocache=1585"></script>
-  <script src="assets/js/scripts.js?nocache=1585"></script>
+  <script src="assets/js/layers.js?nocache=1586"></script>
+  <script src="assets/js/settings.js?nocache=1586"></script>
+  <script src="assets/js/mapping.js?nocache=1586"></script>
+  <script src="assets/js/nazar.js?nocache=1586"></script>
+  <script src="assets/js/fme.js?nocache=1586"></script>
+  <script src="assets/js/cycles.js?nocache=1586"></script>
+  <script src="assets/js/marker.js?nocache=1586"></script>
+  <script src="assets/js/inventory.js?nocache=1586"></script>
+  <script src="assets/js/treasures.js?nocache=1586"></script>
+  <script src="assets/js/legendary.js?nocache=1586"></script>
+  <script src="assets/js/pins.js?nocache=1586"></script>
+  <script src="assets/js/map.js?nocache=1586"></script>
+  <script src="assets/js/language.js?nocache=1586"></script>
+  <script src="assets/js/menu.js?nocache=1586"></script>
+  <script src="assets/js/items.js?nocache=1586"></script>
+  <script src="assets/js/category-collection.js?nocache=1586"></script>
+  <script src="assets/js/routes.js?nocache=1586"></script>
+  <script src="assets/js/pathfinder.main.js?nocache=1586"></script>
+  <script src="assets/js/updates.js?nocache=1586"></script>
+  <script src="assets/js/scripts.js?nocache=1586"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39999584-4"></script>
