--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 
   <link rel="stylesheet" href="assets/css/leaflet.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/styles.css?nocache=1586" />
-  <link rel="stylesheet" href="assets/css/tippy.css?nocache=1586" />
+  <link rel="stylesheet" href="assets/css/coloris.min.css"/>
+  <link rel="stylesheet" href="assets/css/styles.css?nocache=1591" />
+  <link rel="stylesheet" href="assets/css/tippy.css?nocache=1591" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971" crossorigin="anonymous"></script>
 
   <script>
-    const nocache = 1586;
+    const nocache = 1591;
   </script>
 </head>
 
@@ -89,8 +90,21 @@
     </div>
     <div class="settings-container">
       <div class="input-container">
-        <input class="input-search" type="text" id="search" placeholder="Search items. Separated by ;"
+        <div class="input-with-suggestions">
+          <input class="input-search" type="text" id="search" placeholder="Search items. Separated by ;"
           autocomplete="off" data-help="search">
+          <span class="input-search-hotkeys" id="search-hotkey">
+            <kbd class="hotkey"></kbd>
+            <kbd class="hotkey">F</kbd>
+          </span>
+          <div id="query-suggestions" class="query-suggestions" style="display: none;"></div>
+          <span id="query-suggestions-hotkeys" class="query-suggestions-hotkeys" data-text="menu.query_suggestions_hotkey">
+            Search in suggestions, Press 
+              <kbd class="hotkey">↑</kbd> 
+              <kbd class="hotkey">↓</kbd> 
+              <kbd class="hotkey">Enter</kbd> for general search.
+          </span>
+        </div>
         <div id="clear-search" class="input-action-clear" data-help="search_clear"></div>
         <div id="copy-search-link" class="input-action-copy" data-help="search_copy_link"></div>
       </div>
@@ -622,7 +636,7 @@
           </div>
         </div>
         <div class="input-container" data-help="legendary_marker_type">
-          <label for="legendary-marker-type" data-text="menu.legendary_animal_marker_type">Legendary animals marker type</label>
+          <label for="legendary-animal-marker-type" data-text="menu.legendary_animal_marker_type">Legendary animals marker type</label>
           <select class="input-text narrow-select-menu" id="legendary-animal-marker-type">
             <option value="head" data-text="menu.legendary_icon_type.head" selected>Animal heads</option>
             <option value="footprint" data-text="menu.legendary_icon_type.paw_prints">Animal paw prints</option>
@@ -911,6 +925,13 @@
             <label class="input-checkbox-label" for="enable-right-click"></label>
           </div>
         </div>
+        <div class="input-container" data-help="override_browser_search">
+          <label for="override-search" data-text="menu.override_browser_search">Override browser's search</label>
+          <div class="input-checkbox-wrapper">
+            <input class="input-checkbox" type="checkbox" name="override-search" value="1" id="override-search" />
+            <label class="input-checkbox-label" for="override-search"></label>
+          </div>
+        </div>
         <div class="input-container">
           <label for="show-all-markers">Show all markers</label>
           <div class="input-checkbox-wrapper">
@@ -1029,6 +1050,10 @@
         </div>
       </div>
     </div>
+    
+    <button id="back-to-top" title="Scroll back to top (Draggable)">
+      <img src="./assets/images/selection_arrow_up.png" alt="">
+    </button>
   </aside>
   <div class="menu-toggle">></div>
 
@@ -1107,6 +1132,24 @@
           </h4>
         </div>
         <div class="modal-body"></div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.close">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="video-modal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="video-modal-title">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="video-modal-title"></h4>
+        </div>
+        <div class="modal-body">
+          <div class="ratio ratio-16x9">
+            <iframe id="video-frame" src="" frameborder="0" allow="autoplay; fullscreen"></iframe>
+          </div>
+        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-text="menu.close">Close</button>
         </div>
@@ -1337,38 +1380,40 @@
   <script>function isES6() { try { return eval("() => {};"), !0 } catch (r) { return !1 } } isES6() || alert("This browser might not be fully supported, and errors will likely occur. Please update your browser if you experience issues.");</script>
 
   <script src="https://js.sentry-cdn.com/8bb034d026aa4fb38d3428be80b9f776.min.js" crossorigin="anonymous" data-lazy="no"></script>
-  <!-- https://github.com/aceakash/string-similarity -->
-  <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
+  <script src="assets/js/lib/fuse.min.js"></script>
   <script src="assets/js/lib/bootstrap.min.js"></script>
-  <script src="assets/js/loader.js?nocache=1586"></script>
+  <script src="assets/js/loader.js?nocache=1591"></script>
   <script src="assets/js/lib/popper.min.js"></script>
   <script src="assets/js/lib/tippy.min.js"></script>
   <script src="assets/js/lib/leaflet.js"></script>
+  <script src="assets/js/lib/leaflet-zoomex.js"></script>
   <script src="assets/js/lib/oms.min.js"></script>
   <script src="assets/js/lib/rbush.js"></script>
+  <script src="assets/js/lib/coloris.min.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script>var module = {};</script>
   <script src="assets/js/lib/leaflet.canvas-markers.js"></script>
   <script>module.exports(L);</script>
-  <script src="assets/js/layers.js?nocache=1586"></script>
-  <script src="assets/js/settings.js?nocache=1586"></script>
-  <script src="assets/js/mapping.js?nocache=1586"></script>
-  <script src="assets/js/nazar.js?nocache=1586"></script>
-  <script src="assets/js/fme.js?nocache=1586"></script>
-  <script src="assets/js/cycles.js?nocache=1586"></script>
-  <script src="assets/js/marker.js?nocache=1586"></script>
-  <script src="assets/js/inventory.js?nocache=1586"></script>
-  <script src="assets/js/treasures.js?nocache=1586"></script>
-  <script src="assets/js/legendary.js?nocache=1586"></script>
-  <script src="assets/js/pins.js?nocache=1586"></script>
-  <script src="assets/js/map.js?nocache=1586"></script>
-  <script src="assets/js/language.js?nocache=1586"></script>
-  <script src="assets/js/menu.js?nocache=1586"></script>
-  <script src="assets/js/items.js?nocache=1586"></script>
-  <script src="assets/js/category-collection.js?nocache=1586"></script>
-  <script src="assets/js/routes.js?nocache=1586"></script>
-  <script src="assets/js/pathfinder.main.js?nocache=1586"></script>
-  <script src="assets/js/updates.js?nocache=1586"></script>
-  <script src="assets/js/scripts.js?nocache=1586"></script>
+  <script src="assets/js/layers.js?nocache=1591"></script>
+  <script src="assets/js/settings.js?nocache=1591"></script>
+  <script src="assets/js/mapping.js?nocache=1591"></script>
+  <script src="assets/js/nazar.js?nocache=1591"></script>
+  <script src="assets/js/fme.js?nocache=1591"></script>
+  <script src="assets/js/cycles.js?nocache=1591"></script>
+  <script src="assets/js/marker.js?nocache=1591"></script>
+  <script src="assets/js/inventory.js?nocache=1591"></script>
+  <script src="assets/js/treasures.js?nocache=1591"></script>
+  <script src="assets/js/legendary.js?nocache=1591"></script>
+  <script src="assets/js/pins.js?nocache=1591"></script>
+  <script src="assets/js/map.js?nocache=1591"></script>
+  <script src="assets/js/language.js?nocache=1591"></script>
+  <script src="assets/js/menu.js?nocache=1591"></script>
+  <script src="assets/js/items.js?nocache=1591"></script>
+  <script src="assets/js/category-collection.js?nocache=1591"></script>
+  <script src="assets/js/routes.js?nocache=1591"></script>
+  <script src="assets/js/pathfinder.main.js?nocache=1591"></script>
+  <script src="assets/js/updates.js?nocache=1591"></script>
+  <script src="assets/js/scripts.js?nocache=1591"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39999584-4"></script>
