--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div id="copy-search-link" class="input-action-copy" data-help="search_copy_link"></div>
       </div>
     </div>
-    <div class="menu-ad">
+    <!--<div class="menu-ad">
       <ins class="adsbygoogle"
         style="display:inline-block;width:380px;height:280px"
         data-ad-client="ca-pub-8337816533364971"
@@ -122,7 +122,7 @@
       <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
-    </div>
+    </div>-->
     <div id="cycle-changer-container" class="cycle-changer hidden">
       <div id="cycle-prev" class="input-selection-arrow"><img src="assets/images/selection_left.png" alt="arrow"></div>
       <span class="cycle-date">¯\_(ツ)_/¯</span>
