--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
   <link rel="stylesheet" href="assets/css/fancyselect.min.css"/>
   <link rel="stylesheet" href="assets/css/styles.css?nocache=1595" />
   <link rel="stylesheet" href="assets/css/tippy.css?nocache=1595" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971" crossorigin="anonymous"></script>
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971" data-overlays="bottom" crossorigin="anonymous"></script>
   <script>
     const nocache = 1595;
   </script>
