--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <link rel="stylesheet" href="assets/css/styles.css?nocache=1595" />
   <link rel="stylesheet" href="assets/css/tippy.css?nocache=1595" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8337816533364971" data-overlays="bottom" crossorigin="anonymous"></script>
+
   <script>
     const nocache = 1595;
   </script>
@@ -111,7 +112,7 @@
         <div id="copy-search-link" class="input-action-copy" data-help="search_copy_link"></div>
       </div>
     </div>
-    <!--<div class="menu-ad">
+    <div class="menu-ad">
       <ins class="adsbygoogle"
         style="display:inline-block;width:380px;height:280px"
         data-ad-client="ca-pub-8337816533364971"
@@ -121,7 +122,7 @@
       <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
-    </div>-->
+    </div>
     <div id="cycle-changer-container" class="cycle-changer hidden">
       <div id="cycle-prev" class="input-selection-arrow"><img src="assets/images/selection_left.png" alt="arrow"></div>
       <span class="cycle-date">¯\_(ツ)_/¯</span>
@@ -1301,19 +1302,6 @@
     Some markers are being hidden.
   </div>
 
-  <!--
-   <div class="sticky-ad">
-    <ins class="adsbygoogle"
-     style="display:inline-block;width:350px;height:90px"
-     data-ad-client="ca-pub-8337816533364971"
-     data-ad-slot="2055149168"></ins>
-     <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    <button onclick="closeStickyAd()" class="close-btn">X</button>
-  </div>
--->
-
   <!-- Modals -->
   <div class="modal fade" id="fme-enabled-events-modal" tabindex="-1"
     aria-labelledby="fme-enabled-events-title">
@@ -1641,13 +1629,6 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-39999584-4');
-
-    function closeStickyAd() {
-      document.querySelectorAll('.padding-ad').forEach(el => {
-        el.classList.remove('padding-ad');
-      });
-      document.querySelector('.sticky-ad').remove();
-    }
 
   </script>
 </body>
